--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
     "format:fix": "prettier --write ."
   },
   "dependencies": {
-    "@chainlink/contracts": "^0.5.1",
+    "@chainlink/contracts": "^1.1.0",
+    "@chainlink/contracts-ccip": "^1.4.0",
     "@chainlink/env-enc": "^1.0.5",
     "@chainlink/functions-toolkit": "^0.2.6",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.1",
+    "@nomicfoundation/hardhat-verify": "^2.0.6",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts": "^4.7.3",
     "@openzeppelin/contracts-upgradeable": "^4.9.3",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
@@ -35,7 +37,6 @@
     "dotenv": "^16.3.1",
     "eth-crypto": "^2.4.0",
     "ethers": "^5.7.2",
-    "hardhat": "^2.20.1",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.9",
     "husky": "^8.0.1",
@@ -66,5 +67,9 @@
     "semi": false,
     "singleQuote": false,
     "printWidth": 120
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-verify": "^2.0.6",
+    "hardhat": "^2.22.3"
   }
 }
